--- a/assets/styles/widgets/gallery.scss
+++ b/assets/styles/widgets/gallery.scss
@@ -108,6 +108,7 @@ section.gallery {
     position: fixed;
     top: 0;
     left: 0;
+    content: ' ';
     width: 100%;
     height: 100%;
     padding: 1em;
@@ -131,6 +132,14 @@ section.gallery {
             animation: fade-in 0.3s ease-in-out forwards;
         }
     }
+}
+
+[data-prevent-scroll="true"] {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
 }
 
 @keyframes fade-in {
